--- a/docs/5. Add personal agenda.md
+++ b/docs/5. Add personal agenda.md
@@ -1,8 +1,8 @@
-# Add attendee sign up
-In this section we'll add features that track attendees who have registered on the site and allow them to create a personal agenda.
+# Adicionando inscrição para os participantes
+Nesta sessão nós iremos adicionar recursos que rastreiam os participantes que se registraram no site e permitem que eles possam criar uma agenda pessoal.
 
-## Add BackEnd attendee and FrontEnd user association
-1. Update the `AuthHelpers` file in the `Infrastructure` folder, adding members to the `AuthConstants` and `AuthnHelpers` classes for working with attendee users:
+## Adicionando o BackEnd dos participantes e o FrontEnd da associação com o usuário
+1. Atualize o arquivo `AuthHelpers` na pasta `Infrastructure`, adicionando membros nas classes `AuthConstants` e `AuthnHelpers` para trabalhar com usuários participantes:
     ``` c#
     namespace FrontEnd.Infrastructure
     {
@@ -38,7 +38,7 @@ In this section we'll add features that track attendees who have registered on t
         }
     }
     ```
-1. Update the `ClaimsPrincipalFactory` class in the `Areas/Identity` folder and add code to `GenerateClaimsAsync` that adds the `IsAttendee` claim if the user is registered as an attendee:
+1. Atualize a classe `ClaimsPrincipalFactory` na pasta `Areas/Identity` e adicione código no `GenerateClaimsAsync` que adiciona a claim `IsAttendee` se o usuário for registrado como um participante:
     ``` c#
     public class ClaimsPrincipalFactory : UserClaimsPrincipalFactory<User>
     {
@@ -69,8 +69,8 @@ In this section we'll add features that track attendees who have registered on t
         }
     }
     ```
-1. Add a `Welcome.cshtml` Razor page and `Welcome.cshtml.cs` page model in the `Pages` folder.
-1. Add a user sign up form to `Welcome.cshtml`:
+1. Adicioine uma Página Razor `Welcome.cshtml` e um modelo de página `Welcome.cshtml.cs` na pasta `Pages`.
+1. Adicione um formulário de inscrição de usuário no `Welcome.cshtml`:
 
     ```html
     @page
@@ -122,7 +122,7 @@ In this section we'll add features that track attendees who have registered on t
         <partial name="_ValidationScriptsPartial" />
     }
     ```
-1. Create a `Models` folder under your pages folder, create a class called `Attendee.cs`, then create a class which adds display specific information for an attendee
+1. Crie uma sub pasta `Models` dentro da pasta `pages`, crie uma classe chamada `Attendee.cs`, e então crie uma classse que adiciona exibição de informação específica de um participante
     
     ```csharp
     using System.ComponentModel;
@@ -144,7 +144,7 @@ In this section we'll add features that track attendees who have registered on t
         }
     }
     ```
-1. In `Welcome.cshtml.cs`, add logic that associates the logged in user with an attendee:
+1. Na `Welcome.cshtml.cs`, adicione lógica que associa o usuário logado a um participante:
     ```csharp
     using System.Threading.Tasks;
     using FrontEnd.Services;
@@ -201,11 +201,11 @@ In this section we'll add features that track attendees who have registered on t
         }
     }
     ```
-1. Logged in users can now be associated with an attendee by visiting this page.
+1. Usuários logados agora podem ser associados a um participante ao visitar essa página.
 
-## Add a middleware to force logged in users to sign up on welcome page
-1. Add a folder called `Middleware`.
-1. Add a new attribute `SkipWelcomeAttribute.cs` to allow certain pages or action methods to be skipped from enforcing redirection to the Welcome page:
+## Adicione um middleware para forçar usuários logados a se cadastrarem na página de boas vindas
+1. Adicione uma pasta chamada `Middleware`.
+1. Adicione um novo atributo `SkipWelcomeAttribute.cs` para permitir que certas páginas ou métodos de ação (action methods) sejam ignorados para reforçar o redirecionamento para a página de boas vindas:
     
     ```csharp
     using System;
@@ -219,7 +219,7 @@ In this section we'll add features that track attendees who have registered on t
         }
     }
     ```
-1. Add a new class called `RequireLoginMiddleware.cs` that redirects to the Welcome page if the user is authenticated but not associated with an attendee (does not have the `"IsAttendee"` claim):
+1. Adicione uma nova classe chamada `RequireLoginMiddleware.cs` que redireciona para a página de boas vindas se o usuário estiver autenticado mas não associado à um participante (não possuir a claim `IsAttendee`):
 
     ```csharp
     public class RequireLoginMiddleware
@@ -258,7 +258,7 @@ In this section we'll add features that track attendees who have registered on t
         }
     }
     ```
-1. Add the `RequireLoginMiddleware` in `Configure` method in `Startup.cs` before `UseEndpoints()`:
+1. Adicione o `RequireLoginMiddleware` no método `Configure` na `Startup.cs` antes do `UseEndpoints()`:
 
     ```csharp
     app.UseMiddleware<RequireLoginMiddleware>();
@@ -268,7 +268,7 @@ In this section we'll add features that track attendees who have registered on t
         endpoints.MapRazorPages();
     });
     ```
-1. Update the `Welcome.cshtml.cs` class with the attribute to ensure it is skipped when the global filter runs:
+1. Autalize a classe `Welcome.cshtml.cs` com o atributo para garantir que ele será ignorado quando o filtro global for executado:
 
     ```csharp
     [SkipWelcome]
@@ -276,23 +276,23 @@ In this section we'll add features that track attendees who have registered on t
     {
         ...
     ```
-1. This should force all logged in users to register as an attendee.
+1. Isso deve garantir que todos os usuários logados se registrarão como participantes.
 
-## Scaffold and update Logout page
-  >One problem with the above system is that if a new user creates an account but does not register as an attendee, they are unable to logout. The general solution to this is to add the `[SkipWelcome]` page to the `Logout` view, but in order to do that we will need to scaffold it. Identity pages are served from the Identity UI NuGet package by default, but can be added to a project and overridden, as we have already seen in the `Register` page.
+## Aplicando o scaffold e atualização na página de Logout
+  > Um problema com o sistema acima é que se um novo usuário criar uma conta mas não se registrar como participante, ele não conseguirá sair. A solução geral para isso é adicionar a página `[SkipWelcome]` na view `Logout`, mas para fazer isso nós vamos precisar aplicar o scaffold nela. Páginas do Identity são fornecidas pelo pacote do NuGet Identity UI por padrão, mas elas podem ser adicionadas ao projeto para serem sobrescritas, como nós já vimos na página `Register`.
   
-### Using Visual Studio
-1. Right-click on the `FrontEnd` project and select *Add* / *New Scaffolded Item* / *Identity*.
-1. Check the `Account\Logout` page, select the `IdentityDbContext` as the *Data context class*, and press *Add*.
+### Usando o Visual Studio
+1. Clique com o botão direito no projeto `FrontEnd` e escolha *Add* / *New Scaffolded Item* / *Identity*.
+1. Verifique a página `Account\Logout`, escolha o `IdentityDbContext` como *classe de dados de contexto*, e aperte *Add*.
 
-### Using command line
-1. Run this command from the **FrontEnd** project folder.
+### Usando a linha de comando
+1. Execute este comando a partir da pasta do projeto **FrontEnd**.
 ```
 dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext --files Account.Logout
 ```
 
-### Next
-1. Add the `[SkipWelcome]` attribute to the `LogoutModel` class:
+### Continuando
+1. Adicione o atributo `[SkipWelcome]` na classe `LogoutModel`:
     ```csharp
     [SkipWelcome]
     [AllowAnonymous]
@@ -300,19 +300,19 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
     {
         ...
     ```
-1. You're now able to log out if you create a new user but don't register as an attendee.
+1. Agora você conseguirá sair se você criar um novo usuário mas não se registrar como participante.
 
-# Add personal agenda
+# Adicionando agenda pessoal
 
-## Update the ApiClient
-1. Add the following methods to `IApiClient`:
+## Atualize o ApiClient
+1. Adicione os seguintes métodos no `IApiClient`:
     
     ```csharp
     Task<List<SessionResponse>> GetSessionsByAttendeeAsync(string name);
     Task AddSessionToAttendeeAsync(string name, int sessionId);
     Task RemoveSessionFromAttendeeAsync(string name, int sessionId);
     ```
-1. Add the implementations to `ApiClient`:
+1. Adicione as implementações no `ApiClient`:
 
     ```csharp
     public async Task AddSessionToAttendeeAsync(string name, int sessionId)
@@ -338,8 +338,8 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         return await response.Content.ReadAsAsync<List<SessionResponse>>();
     }
     ```
-### Add the BackEnd API to get sessions by an attendee
-1. Add an action called `GetSessions` to the `AttendeesController` in the `BackEnd` project:
+### Adicione a API BackEnd para obter as sessões de um participante
+1. Adicione uma ação chamada `GetSessions` no `AttendeesController` do projeto `BackEnd`:
     ```c#
     [HttpGet("{username}/sessions")]
     public async Task<ActionResult<List<SessionResponse>>> GetSessions(string username)
@@ -355,13 +355,13 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
     }
     ```
 
-## Add Add/Remove to personal agenda buttons to Session details page
-1. Add a property `IsInPersonalAgenda` to `Session.cshtml.cs`:
+## Adicione os botões Add/Remove na agenda pessoal da página de detalhes da Sessão
+1. Adicione um propriedade `IsInPersonalAgenda` no `Session.cshtml.cs`:
 
     ```csharp
     public bool IsInPersonalAgenda { get; set; }
     ```
-1. Compute the value of that property in `OnGetAsync`:
+1. Compute o valor dessa propriedade no `OnGetAsync`:
 
     ```csharp
     if (User.Identity.IsAuthenticated)
@@ -371,7 +371,7 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         IsInPersonalAgenda = sessions.Any(s => s.Id == id);
     }
     ```
-1. Add a form to the bottom of `Session.cshtml` razor page that adds the ability to add/remove the session to the attendee's personal agenda:
+1. Adicione um formulário na parte inferior da página razor `Session.cshtml` que adiciona habilidade de adicionar/remover a sessão da agenda pessoal do participante:
     
     ```html
     <form method="post">
@@ -393,13 +393,13 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         </p>
     </form>
     ```
-1. The above markup uses a star icon from the [ionicons](https://ionicons.com/), one of the [icon libraries recommended by Bootstrap](https://getbootstrap.com/docs/4.0/extend/icons/). Let's add a CDN reference to this library in `Pages\Shared\_Layout.cshtml`, directly above the `site.css` reference:
+1. A marcação acima usa um ícone de estrela do [ionicons](https://ionicons.com/), uma das [coleções de ícones recomendadas pelo Bootstrap](https://getbootstrap.com/docs/4.0/extend/icons/). Vamos adicionar uma referência para um CDN para essa coleção no `Pages\Shared\_Layout.cshtml`, logo acima da referência `site.css`:
     ``` html
     </environment>
     <link rel="stylesheet" href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     ```
-1. Add `OnPostAsync` handlers to `Session.cshtml.cs` that handles the adding/removing of the session to the personal agenda:
+1. Adicione um manipulador `OnPostAsync` no `Session.cshtml.cs` que manipula a adição/remoção da sessão da agenda pessoal:
 
     ```csharp
     public async Task<IActionResult> OnPostAsync(int sessionId)
@@ -416,12 +416,12 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         return RedirectToPage();
     }
     ```
-1. Attendees should now be able to add/remove sessions to/from their personal agenda.
+1. Participantes agora serão capazes de adicionar/remover sessões na agenda pessoal deles.
 
-## Add MyAgenda page
-1. Add `MyAgenda.cshtml` and `MyAgenda.cshtml.cs` files to the `Pages` folder.
-1. The Index page and MyAgenda page share the vast majority of their logic and rendering. We'll refactor the `Index.cshtml.cs` class so that it may be used as a base class for the `MyAgenda` page.
-1. Add a `virtual` `GetSessionsAsync` method to `Index.cshtml.cs`:
+## Adicione a página MyAgenda
+1. Adicione os arquivos `MyAgenda.cshtml` e `MyAgenda.cshtml.cs` na pasta `Pages`.
+1. A página Index e a página MyAgenda compartilham a grande maioria da lógica e redenrização delas. Nós vamos refatorar a classe `Index.cshtml.cs` para que ela possa ser usada como uma classe base para a página `MyAgenda`.
+1. Adicione um método `virtual` `GetSessionsAsync` no `Index.cshtml.cs`:
 
     ```csharp
     protected virtual Task<List<SessionResponse>> GetSessionsAsync()
@@ -429,12 +429,12 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         return _apiClient.GetSessionsAsync();
     }
     ```
-1. Change the `_apiClient` field in `Index.cshtml.cs` to be `protected` instead of `private`:
+1. Altere o campo `_apiClient` no `Index.cshtml.cs` para ser `protected` ao invés de `private`:
 
     ```csharp
     protected readonly IApiClient _apiClient;
     ```
-1. Change the logic in `OnGetAsync` to get session using the new virtual method we just added:
+1. Altere a lógiac no `OnGetAsync` para retornar a sessão usando o novo método virtual que acabamos de adicionar:
 
     Before
     
@@ -447,7 +447,7 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
     ```csharp
     var sessions = await GetSessionsAsync();
     ```
-1. Make the MyAgenda page model derive from the Index page model. Change `MyAgenda.cshtml.cs` to look like this:
+1. Faça o modelo de página MyAgenda herdar do modelo de página Index. Altere o `MyAgenda.cshtml.cs` de forma similar como mostrado a seguir:
 
     ```csharp
     using System;
@@ -476,7 +476,7 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         }
     }
     ```
-1. Refactor the `Index.cshtml` into a `_AgendaPartial.cshtml` under the `Pages\Shared` folder. It should have the following content:
+1. Refatore o `Index.cshtml` para `_AgendaPartial.cshtml` na pasta `Pages\Shared`. Essa view deve ter o seguinte conteúdo:
     ```html
     @model IndexModel
 
@@ -537,13 +537,13 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         }
     </div>
     ```
-1. Update the `Index.cshtml` to use the new `_AgendaPartial`. Replace the entire div with the "agenda" css class and replace it with the following:
+1. Atualize a `Index.cshtml` para usar a nova `_AgendaPartial`. Substitua a div inteira com a classe css "agenda" alterando o trecho de código para o seguinte:
     ```html
     <h1 class="mb-4">My Conference @System.DateTime.Now.Year</h1>
 
     <partial name="_AgendaPartial" model="Model" />
     ```
-1. Next, use the `_AgendaPartial` on the `MyAgenda.cshtml` page.
+1. A seguir, use a `_AgendaPartial` na página `MyAgenda.cshtml`.
     ```html
     @page
     @model MyAgendaModel
@@ -564,9 +564,9 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
     <partial name="_AgendaPartial" model="Model" />
     ```
 
-## Add the My Agenda link to the Layout
-1. Go to the layout file `_Layout.cshtml`.
-1. Add a link that shows up only when authenticated under the `/Speakers` link:
+## Adicione o link My Agenda no Layout
+1. Abra o arquivo de layout `_Layout.cshtml`.
+1. Adicione um link que é exibido apenas para usuários autenticados abaixo do link `/Speakers`:
 
     ```html
     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -591,12 +591,12 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
     </div>
     ```
 
-## Update IndexModel to include User Sessions
-1. Add a `UserSessions` property to the `IndexModel`:
+## Atualize o IndexModel para incluir as user Sessions
+1. Adicione uma propriedade `UserSessions` no `IndexModel`:
     ```csharp
     public List<int> UserSessions { get; set; } = new List<int>();
     ```
-1. Update the `OnGet` method to fetch the `UserSessions`:
+1. Atualize o método `OnGet` para carregar a `UserSessions`:
 
     ```csharp
     public async Task OnGet(int day = 0)
@@ -612,7 +612,7 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         var sessions = await GetSessionsAsync();
         //...
     ```
-1. Add the following two methods to the `IndexModel` to handle adding and removing sessions from your agenda from the `Index` page:
+1. Adicione os seguintes dois métodos no `IndexModel` para manipular a adição e a remoção de sessões da sua agenda na página `Index`:
     ```csharp
     public async Task<IActionResult> OnPostAsync(int sessionId)
     {
@@ -628,6 +628,6 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
         return RedirectToPage();
     }
     ```
-1. Run the application and test logging in and managing your agenda from the `Index` page, individual session details, and from the `My Agenda` page.
+1. Execute a aplicação e teste o recurso de *logging* e o gerenciamento da sua agenda na página `Index`, detalhes individuais de sessões, e na página `My Agenda`.
 
-**Next**: [Session #6 - Deployment](6.%20Production%20Readiness%20and%20Deployment.md) | **Previous**: [Session #4 - Authentication](4.%20Add%20auth%20features.md)
+**Próximo**: [Sessão #6 - Deployment](6.%20Production%20Readiness%20and%20Deployment.md) | **Anterior**: [Sessão #4 - Autenticação](4.%20Add%20auth%20features.md)
