--- a/docs/5. Add personal agenda.md
+++ b/docs/5. Add personal agenda.md
@@ -630,4 +630,4 @@ dotnet aspnet-codegenerator identity --dbContext FrontEnd.Data.IdentityDbContext
     ```
 1. Execute a aplicação e teste o recurso de *logging* e o gerenciamento da sua agenda na página `Index`, detalhes individuais de sessões, e na página `My Agenda`.
 
-**Próximo**: [Sessão #6 - Deployment](6.%20Production%20Readiness%20and%20Deployment.md) | **Anterior**: [Sessão #4 - Autenticação](4.%20Add%20auth%20features.md)
+**Próximo**: [Sessão #6 - Implantação](6.%20Production%20Readiness%20and%20Deployment.md) | **Anterior**: [Sessão #4 - Autenticação](4.%20Add%20auth%20features.md)
