--- a/docs/6. Production Readiness and Deployment.md
+++ b/docs/6. Production Readiness and Deployment.md
@@ -1,31 +1,31 @@
-# Production Readiness and Deployment
+# Prontidão de produção e implantação
 
-## Adding EF Healthchecks to the BackEnd
-1. Add a reference to the NuGet package `Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore` version `3.0.0`.
-    > This can be done from the command line using `dotnet add package Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore --version 3.0.0`
-1. Add a DbContext health check in `Startup.cs` by adding the following code to `ConfigureServices`:
+## Adicionando Healthchecks do EF no BackEnd
+1. Adicione uma referência para o pacote NuGet `Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore` version `3.0.0`.
+    > Isso pode ser feito pela linha de comando usando `dotnet add package Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore --version 3.0.0`
+1. Adicione um DbContext para o *health check* no `Startup.cs` adicionando o seguinte código no `ConfigureServices`:
    ```csharp
    services.AddHealthChecks()
            .AddDbContextCheck<ApplicationDbContext>();
    ```
-1. Wire up health checks by modifying the `UseEndpoints` to add a call to `endpoints.MapHealthChecks("/health");`. This will configure the health checks on the `/health` end point.
-1. Test the end point by navigating to `/health`, it should return the text `Healthy`.
+1. O *health check* é ativado modificando-se o `UseEndpoints` para fazer uma chamada para o `endpoints.MapHealthChecks("/health");`. Isso vai configurar o *health check* no *end point* `/health`.
+1. Teste o end point navegando para `/health`, isso deve retornar o texto `Healthy`.
 
-## Adding EF Healthchecks to the FrontEnd
-1. Add a reference to the NuGet package `Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore` version `3.0.0`.
-    > This can be done from the command line using `dotnet add package Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore --version 3.0.0`
+## Adicionando Healthchecks do EF no FrontEnd
+1. Adicione uma referência para o pacote NuGet `Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore` version `3.0.0`.
+    > Isso pode ser feito pela linha de comando usando `dotnet add package Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore --version 3.0.0`
 
-    > Note: The `FrontEnd` and `BackEnd` projects have different versions of this package because they reference different versions of EntityFrameworkCore.
-1. Add a DbContext health check in `Startup.cs` by adding the following code to `ConfigureServices`:
+    > Obs.: Os projetos `FrontEnd` e `BackEnd` tem versões diferentes desse pacote porque eles também referênciam versões diferentes do EntityFrameworkCore.
+1. Adicione um DbContext para o *health check* no `Startup.cs` adicionando o seguinte código no `ConfigureServices`:
    ```csharp
    services.AddHealthChecks()
            .AddDbContextCheck<IdentityDbContext>();
    ```
-1. Wire up health checks by modifying the `UseEndpoints` to add a call to `endpoints.MapHealthChecks("/health");`. This will configure the health checks on the `/health` end point.
-1. Test the end point by navigating to `/health`, it should return the text `Healthy`.
+1. O *health check* é ativado modificando-se o `UseEndpoints` para fazer uma chamada para o `endpoints.MapHealthChecks("/health");`. Isso vai configurar o *health check* no *end point* `/health`.
+1. Teste o end point navegando para `/health`, isso deve retornar o texto `Healthy`.
 
-## Adding a custom health check to test for BackEnd availability
-1. Add a `CheckHealthAsync` method to `IApiClient`.
+## Adicionando um *health check* personalizado para testar a disponibilidade do BackEnd
+1. Adicione um método `CheckHealthAsync` no `IApiClient`.
    ```c#
    public interface IApiClient
    {
@@ -33,7 +33,7 @@
        Task<bool> CheckHealthAsync();
    }
    ```
-1. Implement the `CheckHealthAsync` method in `ApiClient` by adding the following code:
+1. Implemente o método `CheckHealthAsync` adicionando o seguinte código:
     ```csharp
     public async Task<bool> CheckHealthAsync()
     {
@@ -49,8 +49,8 @@
         }
     }
     ```
-1. Create a `HealthChecks` folder under the root folder in the FrontEnd project.
-1. Create a file called `BackendHealthCheck.cs` with the following implementation:
+1. Crie uma pasta `HealthChecks` na pasta raiz do projeto FrontEnd.
+1. Crie um arquivo chamado `BackendHealthCheck.cs` com a seguinte implementação:
     ```csharp
     using System;
     using System.Collections.Generic;
@@ -83,41 +83,41 @@
         }
     }
     ```
-1. Register the `BackendHealthCheck` in `ConfigureServices`:
+1. Registre o `BackendHealthCheck` no `ConfigureServices`:
     ```csharp
     services.AddHealthChecks()
             .AddCheck<BackendHealthCheck>("backend")
             .AddDbContextCheck<IdentityDbContext>();
     ```
-1. Test the end point by navigating to `/health`, it should return the text `Healthy`.
+1. Teste o *end point* navegando para `/health`, isso deve retornar o texto `Healthy`.
 
-## Publishing locally
+## Publicando localmente
 
 https://docs.microsoft.com/en-us/aspnet/core/publishing/#publish-to-a-folder
 
-## Publishing to Production (Azure App Service)
+## Publicando em Produção (No Azure App Service)
 
 - [Visual Studio](https://docs.microsoft.com/en-us/aspnet/core/tutorials/publish-to-azure-webapp-using-vs)
 - [Git](https://docs.microsoft.com/en-us/aspnet/core/publishing/azure-continuous-deployment)
 
-## Publishing using Docker
+## Publicando usando Docker
 
-**Prerequisites**
+**Prerequisitos**
 
 - [Docker for Windows](https://www.docker.com/docker-windows) or [Docker for Mac](https://www.docker.com/docker-mac)
 - [Visual Studio Tools for Docker with ASP.NET Core](https://docs.microsoft.com/aspnet/core/host-and-deploy/docker/visual-studio-tools-for-docker)
 
-### Using Visual Studio
+### Usando o Visual Studio
 
-Add Docker support to the **BackEnd** project by right clicking the project file and selecting Add > Docker Support
+Adicione suporte ao Docker no projeto **BackEnd** clicando com o botão direito do mouse no aquivo do projeto e escolhendo Add > Docker Support
 
-A new project is added to the solution **docker-compose.dcproj** containing the following files.
+Um novo projeto é adicionado na solução **docker-compose.dcproj** contendo os seguintes arquivos.
 
 - .dockerignore
 - docker-compose.yml
 - docker-compose.override.yml
 
-A **Dockerfile** is also added to the **BackEnd** project.
+Um **Dockerfile** também é adicionado ao projeto **BackEnd**.
 
 ```Dockerfile
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0 AS base
@@ -144,7 +144,7 @@ COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "BackEnd.dll"]
 ```
 
-Repeat the same step for the **FrontEnd** project. The Dockerfile is added to the project for it.
+Repita os mesmos passos para o projeto **FrontEnd**. O Dockerfile é adicionado ao projeto para ele.
 
 ```Dockerfile
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0 AS base
@@ -171,7 +171,7 @@ COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "FrontEnd.dll"]
 ```
 
-The **docker-compose.yml** file is updated to reflect that there are two projects to build images.
+O arquivo **docker-compose.yml** é atualizado para refletir que haverá dois projetos para *buildar* imagens.
 
 ```yaml
 version: '3'
@@ -192,17 +192,17 @@ services:
 
 #### Linking / Networking
 
-In the previous architecture, there were some setting and manual orchestration to start up and wire the applications together.
+Na arquitetura anterior, haviam algumas definições e orquestração manual para iniciar e rodar as aplicações juntas.
 
-- **BackEnd** tested for OS type and set the application to use SQL Server or SQLite
-- **FrontEnd** application had the API url set in the *appsetting.json* file.
-- **BackEnd** hard coded the url:port - `http://localhost:56009`
+- **BackEnd** testado para tipo de SO e para definir a aplicação para usar o SQL Server ou SQLite
+- **FrontEnd** a aplicação tem a url da API definida no arquivo *appsetting.json*
+- **BackEnd** a url 'hard coded' e a port - `http://localhost:56009`
 
-Using Docker, adding a container for SQL Server and linking the containers in the compose file simplifies this.
+Usando Docker, adicionando um container para o SQL Server e vinculando os containers no aquivo de composição simplifica isso.
 
-#### Adding SQL Server
+#### Adicionando SQL Server
 
-Open the docker-compose.yml file and add the following entry. *Note the $ is doubled for escaping*
+Abra o arquivo docker-compose.yml e adicione a seguinte entrada. *Veja que o $ é duplo por uma questão de formatação*
 
 ```yaml
   db:
@@ -212,7 +212,7 @@ Open the docker-compose.yml file and add the following entry. *Note the $ is dou
       ACCEPT_EULA: "Y
 ```
 
-Since the **BackEnd** application must have connectivity and cannot start until the database container is ready. Add the **depends_on** entry to the **backend** definition in the compose file.
+Como a aplicação **BackEnd** tem que ter conectividade e não pode iniciar até que o container de banco de dados esteja pronto, adicione a entrada **depends_on** à definição do **backend** no arquivo de composição.
 
 ```yaml
   backend:
@@ -224,7 +224,7 @@ Since the **BackEnd** application must have connectivity and cannot start until 
       - db
 ```
 
-Finally, change the connection string for the database in the BackEnd\appsettings.json file.
+Por fim, altere a connection string do banco de dados no arquivo BackEnd\appsettings.json.
 
 ```javascript
   "ConnectionStrings": {
@@ -232,9 +232,9 @@ Finally, change the connection string for the database in the BackEnd\appsetting
   }
 ```
 
-##### Linking / Networking FrontEnd & BackEnd
+##### Vinculando / Criando rede entre o FrontEnd e o BackEnd
 
-In the **docker-compose.yml** file, add the **links** section to the **frontend** definition. This sets up the host name in the Docker networking allowing for the web application to call the API by name. `http://backend`
+No arquivo **docker-compose.yml**, adicione a sessão **links** na definição do **frontend**. Isso define o nome do *host* na rede do Docker permitindo que a aplicação web possa fazer chamadas na API por nome. `http://backend`
 
 ```yaml
   frontend:
@@ -246,16 +246,16 @@ In the **docker-compose.yml** file, add the **links** section to the **frontend*
       - backend
 ```
 
-Change the value for the **ServiceUrl** in FrontEnd/appsetting.json
+Altere o valor do **ServiceUrl** no FrontEnd/appsetting.json
 
 ```javascript
 {
   "ServiceUrl": "http://backend/",
 ```
 
-Remove or comment out the `.UseUrls(http://localhost:56009)` in BackEnd\Program.cs.
+Remova ou comente o `.UseUrls(http://localhost:56009)` no BackEnd\Program.cs.
 
-Finally open the **docker-compose.override.yml** file. Change the ports for the **backend** entry to `56009:80` and for the **frontend**, make it `5001:80`
+Finalmente abra o arquivo **docker-compose.override.yml**. Altere as portas da entrada **backend** para `56009:80` e para o **frontend**, mude para `5001:80`
 
 ```yaml
 version: '3'
@@ -274,17 +274,17 @@ services:
       - "5001:80"
 ```
 
-By changing these values, the API can still be hit via `http://localhost:56009`, allowing for testing using the swagger UI.  The FrontEnd web application will run on `http://localhost:5001`, however communicates to the API via internal networking hostname **backend**.
+Alterando esses valores, a API ainda pode ser acessada via `http://localhost:56009`, possibilitando testes usando a UI do swagger. A aplicação web FrontEnd pode ser acessada em `http://localhost:5001`, porém ela se comunica comm a API via rede interna pelo nome de *host* **backend**.
 
-#### Starting and Debugging
+#### Iniciando e debugando
 
-Once the changes are complete, F5 to build start the application in Docker. Debugging is still available in all projects, but now the application is running in containers.
+Uma vez completas as alterações, pressione F5 para iniciar o processo de build e a aplicação em Docker. Depuração ainda está disponível em todos projetos, mas agora a aplicação está rodando em containers.
 
-Changes can be made to Razor pages and seen immediately without rebuilds, however and *.cs file changes require rebuilds.
+Alterações podem ser feitas nas páginas Razor e vistas imediatamente sem rebuilds, porém alterações em arquivoa *.cs exigem rebuilds.
 
-### Using VS Code or other editors
+### Usando VS Code ou outros editores
 
-Create and add the following Dockerfile for the BackEnd application.
+Crie e adicione o seguinte Dockerfile na aplicação BackEnd.
 
 ```Dockerfile
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0 AS base
@@ -313,7 +313,7 @@ ENTRYPOINT ["dotnet", "BackEnd.dll"]
 
 ```
 
-Create and add the following Dockerfile for the BackEnd application.
+Crie e adicione o seguinte Dockerfile na aplicação BackEnd.
 
 ```Dockerfile
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0 AS base
@@ -342,7 +342,7 @@ ENTRYPOINT ["dotnet", "FrontEnd.dll"]
 
 ```
 
-At the root of the ConferencePlanner solution, add the following **docker-compose.yml** file.
+Na raiz da solução ConferencePlanner, adicione o seguinte arquivo **docker-compose.yml**.
 
 ```yaml
 version: '3'
@@ -379,9 +379,9 @@ services:
       ACCEPT_EULA: "Y"
 ```
 
-#### SQL Server Configuration
+#### Configuração SQL Server
 
-Change the connection string for the database in the BackEnd\appsettings.json file.
+Altere a string de conexão do banco de dados no arquivo BackEnd\appsettings.json.
 
 ```javascript
   "ConnectionStrings": {
@@ -389,33 +389,33 @@ Change the connection string for the database in the BackEnd\appsettings.json fi
   }
 ```
 
-#### Linking / Networking FrontEnd & Backend
+##### Vinculando / Criando rede entre o FrontEnd e o BackEnd
 
-Change the value for the **ServiceUrl** in FrontEnd/appsetting.json
+Altere o valor do **ServiceUrl** no FrontEnd/appsetting.json
 
 ```javascript
 {
   "ServiceUrl": "http://backend/",
 ```
 
-Remove or comment out the `.UseUrls(http://localhost:56009)` in BackEnd\Program.cs.
+Remova ou comente o `.UseUrls(http://localhost:56009)` no BackEnd\Program.cs.
 
-#### Building and Running
+#### Buildando e rodando
 
-- Build the Docker images `docker-compose build`
-- Run `docker-compose up -d` to start the application
-- Run `docker-compose down` to stop the application
-- Open the application at <http://localhost:5002>
+- Faça o build das imagems Docker `docker-compose build`
+- Execute `docker-compose up -d` para iniciar a aplicação
+- Execute `docker-compose down` para parar a aplicação
+- Abra a aplicação em <http://localhost:5002>
 
-## Bonus
+## Bônus
 
 ### Helm Chart
 
-A [helm chart](https://helm.sh/) is located in **/save-points/6-Deployment-docker/helm** allowing for deployment to a Kubernetes cluster using `helm install ./workshop`.
+Um [helm chart](https://helm.sh/) está localizado em **/save-points/6-Deployment-docker/helm** permitindo o fazer deployment no cluster do Kubernetes usando `helm install ./workshop`.
 
 #### values.yaml
 
-Here values for the service and deployment templates are defined. Docker images and tags should be updated to your repository name in the `image` and `tag` fields for each part of the application prior to deplyoyment.
+Aqui, os valores para os modelos de serviço e implantação são definidos. As imagens e tags do Docker devem ser atualizadas para o nome do seu repositório nos campos `image` e` tag` para cada parte do aplicativo antes da implementação.
 
 ```yaml
 db:
@@ -455,4 +455,4 @@ backend:
   restart: Always
 ```
 
-**Next**: [Session #7 - Challenges](7.%20Challenges.md) | **Previous**: [Session #5 - Add Agenda](5.%20Add%20personal%20agenda.md)
+**Próximo**: [Sessão #7 - Desafios](7.%20Challenges.md) | **Anterior**: [Sessão #5 - Adicionar Agenda](5.%20Add%20personal%20agenda.md)
