--- a/docs/7. Challenges.md
+++ b/docs/7. Challenges.md
@@ -1,52 +1,53 @@
-# Challenges
+# Desafios
 
-Now that we've built the basic site, there might be time for some challenges! Below are a list of feature ideas that take advantage of other ASP.NET Core features:
+Agora que nós já construimos o site básico, nós temos tempo para alguns desafios! Abaixo está uma lista de idéias de recursos 
+que tiram vantagem de outros recursos do ASP.NET Core.
 
-## Identity
- - Add support external authentication like Google or Twitter authentication - https://docs.microsoft.com/en-us/aspnet/core/security/authentication/social/?view=aspnetcore-2.2
+## Identidade
+ - Adicione suporte externo para autenticação como a autenticação  do Google ou Twitter - https://docs.microsoft.com/en-us/aspnet/core/security/authentication/social/?view=aspnetcore-2.2
 
 ## Logging
-- Add `Serilog`, a 3rd party logger to the front end and disable built in console logging.
+ - Adicione o `Serilog`, um logger de terceiros no front end e desabilite o console de logging embutido.
 
-## Images
- - Allow attendees to upload images.
- - Resize the image using [ImageSharp](https://github.com/JimBobSquarePants/ImageSharp)
+## Imagens
+ - Permita que participantes possam subir imagens.
+  - Redimencione imagens usando [ImageSharp](https://github.com/JimBobSquarePants/ImageSharp)
 
 ## Caching
- - Add appropriate caching to FrontEnd site:
-    - [Memory cache](https://docs.microsoft.com/en-us/aspnet/core/performance/caching/memory)
-    - [Distributed cache](https://docs.microsoft.com/en-us/aspnet/core/performance/caching/distributed)
-    - [Response caching](https://docs.microsoft.com/en-us/aspnet/core/performance/caching/response)
+  - Adicione recursos de cache no site FrontEnd:
+    - [Cache em memória](https://docs.microsoft.com/en-us/aspnet/core/performance/caching/memory)
+    - [Cache distribuído](https://docs.microsoft.com/en-us/aspnet/core/performance/caching/distributed)
+    - [Caching de resposta](https://docs.microsoft.com/en-us/aspnet/core/performance/caching/response)
 
 ## Tag Helpers
-- Render Markdown for the session Abstract (instead of HTML) using a custom markdown tag helper.
+- Renderize *markdown* na sessão de Abstract (ao invés de HTML) usando uma *tag helper* de *markdown* customizada.
 
-## Data
- - Change database provider to [Postgres](https://www.postgresql.org/) - https://www.nuget.org/packages/Npgsql/
- - Change database provider to [MySql](https://www.mysql.com/) - https://www.nuget.org/packages/MySql.Data/
+## Dados
+ - Altere o provedor de banco de dados para [Postgres](https://www.postgresql.org/) - https://www.nuget.org/packages/Npgsql/
+ - Altere o provedor de banco de dados para [MySql](https://www.mysql.com/) - https://www.nuget.org/packages/MySql.Data/
  
-## Testing
- - Write unit tests for the BackEnd Controllers
- - Write unit tests for the FrontEnd Razor pages
- - Write functional tests 
+## Teste
+ - Escreva testes de unidade para os BackEnd Controllers
+ - Escreva testes de unidade para as páginas Razor do FrontEnd
+ - Escreva testes funcionais
 
-## FrontEnd Features
-- Make the names slugs instead of using IDs in the urls to navigate entities
-- Configure [retry policy using Polly library](https://github.com/App-vNext/Polly/wiki/Polly-and-HttpClientFactory)
-- Support multiple conferences
-   - Add conference date
-   - Make the home page show upcoming conferences (within 5 days)
-   - Move agenda to separate page
-- Add admin pages to manage:
-  - Tracks
-  - Attendees
-  - Conferences
-  - Sessions
-  - Speakers (allow speaker image upload)
+## Recursos do FrontEnd
+- Torne os nomes *slugs* em vez de usar IDs nos URLs para navegar pelas entidades
+- Configure [política de repetição usando a biblioteca Polly](https://github.com/App-vNext/Polly/wiki/Polly-and-HttpClientFactory)
+- Adicione suporte para conferências multiplas
+   - Adicione data da conferência
+   - Faça com que a página inicial exiba as próximas conferências (dentro de 5 dias)
+   - Passe a agenda para uma página separada
+- Adicione páginas para gerenciar:
+  - Palestras
+  - Participantes
+  - Conferências
+  - Sessões
+  - Palestrantes (permita aos palestrantes subir imagens)
   
-## BackEnd Features
- - Add date filtering to the BackEnd APIs
- - Add support for returning XML from the APIs
- - Add links to related entities in the responses e.g. Attendee has a list of sessions, return URLs for each of the session resources related to Attendee.
+## Recursos do BackEnd
+ - Adicione filtro para data nas APIs do BackEnd
+ - Adicione suporte para retornar XML nas APIs
+ - Adicione vinculo para entidades relacionadas nas respostas ex. Participante tem uma lista de sessões, retorne URLs para cada um dos recursos das sessões relacionadas com o Participante.
 
-**Next**: [Session #8 - SPA front-end](8.%20SPA%20FrontEnd.md) | **Previous**: [Session #6 - Deployment](6.%20Production%20Readiness%20and%20Deployment.md)
+**Próximo**: [Sessão #8 - SPA front-end](8.%20SPA%20FrontEnd.md) | **Anterior**: [Sessão #6 - Implantação](6.%20Production%20Readiness%20and%20Deployment.md)
